deploy/catalog/api/catalog-api.deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: catalog-api
  labels:
    component: catalog-api
spec:
  replicas: 1
  selector:
    matchLabels:
      component: catalog-api
  template:
    metadata:
      labels:
        component: catalog-api
    spec:
      containers:
        - name: catalog-api
          image: catalogapi:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 8000
