deploy/catalog/api/catalog-api.service.yml
apiVersion: v1
kind: Service
metadata:
  name: catalog-api
spec:
  selector:
    component: catalog-api
  type: ClusterIP
  ports:
    - port: 8000
      targetPort: 80
