deploy/catalog/api/catalog-api.ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: catalog-api
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
        - backend:
            service:
              name: catalog-api
              port:
                number: 8000
          path: /catalog(/|$)(.*)
          pathType: Prefix
